About page images overflow fixed!

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -37,3 +37,9 @@
 .p-t-40{
     padding-top: 40px;
 }
+
+
+.image-overflow{
+    display: block;
+    overflow: hidden
+}
